app/assets/stylesheets/main.scss
body {
  margin: 0;
}

.main {
  margin: 20px auto 60px auto;
  width: 90%;
}

.header {
  .menu-holder {
    border-bottom: 1px solid $lightgrey;
  }

  .logo {
    margin: 0;
    padding-left: 20px;
    width: 90%;
    height: 100%;
  }
}

.menu-holder {
  height: 40px;
  width: 100%;
  margin: 0 auto;

  .link {
    width: 113px;
    height: 40px;
    line-height: 40px;
    display: block;
  }

  .link-holder {
    height: 40px;
    width: 113px;
    display: inline-block;
    text-align: center;
  }

  a {
    height: 40px;
    width: 113px;
  }
}

.footer {
  .menu-holder {
    border-top: 1px solid $lightgrey;
  }
}

.end {
  float: right;
}

.privilege {
  min-height: 640px;
}

.privilege, .policy {
  width: 100%;
  margin: 0 auto;
}

.left-col {
  width: 100%;
  float: left;
}

.right-col {
  display: none;
}

.flash {
  padding: 10px 20px 0;
}

img {
  max-width: 100%;
  max-height: 100%;
}

@media only screen and (min-width: 600px) {
  .left-col {
    width: 50%;
  }

  .main, .privilege, .policy, .menu-holder {
    width: 80%;
  }

  .right-col {
    display: block;
    width: 50%;
    float: right;
  }
}

